REFACTOR (backend): use JPA interfaces instead of entity managers