@@ -3,23 +3,21 @@ package com.blog.modules.media.infrastructure.adapter.out.persistence;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
 import com.blog.modules.media.domain.model.Media;
 import com.blog.modules.media.domain.port.out.MediaRepository;
-
-import jakarta.persistence.EntityManager;
+import com.blog.modules.media.infrastructure.exception.MediaNotFoundException;
 
 @Repository
 public class MediaRepositoryImpl implements MediaRepository {
 
-    private final EntityManager entityManager;
     private final SpringDataMediaRepository jpaRepository;
 
-    public MediaRepositoryImpl(SpringDataMediaRepository jpaRepository, EntityManager entityManager) {
+    public MediaRepositoryImpl(SpringDataMediaRepository jpaRepository) {
         this.jpaRepository = jpaRepository;
-        this.entityManager = entityManager;
     }
 
     @Override
@@ -30,46 +28,32 @@ public class MediaRepositoryImpl implements MediaRepository {
 
     @Override
     public void linkMediaToPost(UUID mediaId) {
-        MediaEntity entity = entityManager.find(MediaEntity.class, mediaId);
-        entity.setRelatedTo("post");
-        entityManager.persist(entity);
+        Optional<MediaEntity> entityOpt = jpaRepository.findById(mediaId);
+        if (entityOpt.isPresent()) {
+            MediaEntity entity = entityOpt.get();
+            entity.setRelatedTo("post");
+            jpaRepository.save(entity);
+        } else {
+            throw new MediaNotFoundException("Media not found with id: " + mediaId);
+        }
     }
 
     @Override
-    public Optional<Media> findById(UUID id) {
-        MediaEntity entity = entityManager.find(MediaEntity.class, id);
-        if (entity == null) {
-            return Optional.empty();
-        }
-        return Optional.of(MediaMapper.toDomain(entity));
+    public Optional<Media> findById(UUID mediaId) {
+        return jpaRepository.findById(mediaId).map(MediaMapper::toDomain);
     }
 
     @Override
     public List<Media> findByPostId(UUID postId) {
-        return entityManager.createQuery("""
-        SELECT m FROM MediaEntity m
-        JOIN PostMediaEntity pm ON m.id = pm.id.mediaId
-        WHERE pm.id.postId = :postId
-        """, MediaEntity.class)
-                .setParameter("postId", postId)
-                .getResultList()
-                .stream()
+        return jpaRepository.findByPostId(postId).stream()
                 .map(MediaMapper::toDomain)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public void deleteById(UUID id) {
-        entityManager.createQuery("""
-        DELETE FROM PostMediaEntity pm
-        WHERE pm.id.mediaId = :mediaId
-    """)
-                .setParameter("mediaId", id)
-                .executeUpdate();
-
-        MediaEntity entity = entityManager.find(MediaEntity.class, id);
-        if (entity != null) {
-            entityManager.remove(entity);
+    public void deleteById(UUID mediaId) {
+        if (mediaId != null) {
+            jpaRepository.deleteById(mediaId);
         }
     }
 
